Fixed scrollbars buttons missing on nightly

--- a/userChrome.css
+++ b/userChrome.css
@@ -11,7 +11,7 @@
 
 /* Scrollbars */
 .titlebar-placeholder[type="pre-tabs"] {
-	-moz-binding: url("./userChrome/userChrome.xml#execute_javascript_code");
+	-moz-binding: url("./js/userChrome.xml#execute_javascript_code");
 }
 
 :root {
